# todors

./: .gitignore  Cargo.toml  build.rs  flake.nix
nix/: package.nix
src/: cli.rs  config.rs  lib.rs  main.rs  utils.rs
src/cli/: add.rs  clean.rs  done.rs  due.rs  edit.rs  handlers.rs  list.rs  mod.rs  modify.rs  next.rs  remove.rs  undone.rs
src/handlers/: add.rs  clean.rs  done.rs  due.rs  edit.rs  list.rs  mod.rs  modify.rs  next.rs  remove.rs  undone.rs
src/storage/: mod.rs
src/tasks/: error.rs  list.rs  mod.rs  query.rs  task.rs
tests/: add.rs
tests/cli/: add.rs
