[package]
name = "todors"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "todors"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.1"
colored = "3"

[dev-dependencies]
tempfile = "3.20"

# Dependencies to generate shells complication
[build-dependencies]
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
chrono = { version = "*", features = ["serde"] }
